# houseflow

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .firebaserc  .gitattributes  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile_ARM  PRIVACY_POLICY.md  README.md  TERMS_AND_CONDITIONS.md  docker-compose.dev.yml  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  go.mod  go.sum  jsconfig.json  package-lock.json  package.json  run-rediscli.sh  send_request.sh  start.sh  test.test  tsconfig.json
accessories/hal/: Cargo.toml
accessories/hal/src/: lib.rs
accessories/virtual/: Cargo.toml
accessories/virtual/src/: lib.rs  main.rs
api/: Cargo.toml  package-lock.json  package.json
api/examples/: lighthouse.rs
api/src/: admin.rs  app.ts  async.rs  auth.rs  fulfillment.rs  hive.rs  index.ts  lib.rs  sync.rs
api/src/hub/: hive.rs  mod.rs
api/src/routes/: routes.ts
api/src/server/: auth.rs  lighthouse.rs  meta.rs  mod.rs
api/src/services/: firebase.ts
auth/api/: Cargo.toml
auth/api/src/: lib.rs
auth/core/: Cargo.toml
auth/core/src/: lib.rs
auth/server/: Cargo.toml  auth.go  server.go  token.go
auth/server/src/: auth.rs  config.rs  lib.rs  main.rs  token.rs  token_store.rs  whoami.rs
auth/types/: Cargo.toml  user.go
auth/types/src/: auth.rs  lib.rs  token.rs  whoami.rs
boards/anyos/: Cargo.toml
boards/anyos/src/: main.rs
cli/: Cargo.toml  go.mod
cli/genkey/: genkey.go  validate.go
cli/src/: context.rs  crypto.rs  device.rs  key.rs  main.rs
cli/src/auth/: login.rs  logout.rs  mod.rs  refresh.rs  status.rs
cli/src/cli/: auth.rs  completions.rs  fulfillment.rs  meta.rs  mod.rs
cli/src/fulfillment/: execute.rs  mod.rs  query.rs  sync.rs
cli/src/meta/: read.rs
cmd/broker/: .gitignore  CMakeLists.txt  Dockerfile  README.md  mosquitto.conf  mosquitto_houseflow.c
config/: Cargo.toml
config/src/: client.rs  command.rs  defaults.rs  device.rs  dynamic.rs  lib.rs  log.rs  postgres.rs  redis.rs
config/src/accessory/: default.toml  example.toml  mod.rs
config/src/client/: default.toml  default.yaml  example.toml  mod.rs
config/src/device/: default.toml  default.yaml  example.toml  mod.rs
config/src/hub/: example.toml  mod.rs
config/src/server/: config.toml  default.toml  default.yaml  example.toml  google.rs  mod.rs  tls.rs
core/: Cargo.toml  cli.rs  context.rs  main.rs
core/admin/: add.rs  mod.rs
core/admin/device/: add.rs  mod.rs
core/admin/room/: add.rs  mod.rs
core/admin/structure/: add.rs  mod.rs
core/auth/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs  status.rs
core/cli/: admin.rs  auth.rs  fulfillment.rs  mod.rs
core/config/: generate.rs  mod.rs
core/device/: mod.rs  run.rs
core/fulfillment/: execute.rs  mod.rs  query.rs  sync.rs
core/server/: mod.rs  run.rs
core/src/: auth.rs  cli.rs  keystore.rs  main.rs  run.rs
core/src/run/: mod.rs  (+3 more)
db/: Cargo.toml
db/examples/: simple.rs
db/migrations/: 20210518174132_types.sql  20210518174138_users.sql  20210518174144_devices.sql  20210518174145_user_permissions.sql  V1__initial.sql
db/src/: device.rs  lib.rs  user.rs
devices/rpi/: Cargo.toml  package-lock.json  package.json  tsconfig.json
devices/virtual/: .env.example  Cargo.toml  go.mod  go.sum  main.go  run.sh  virtual
fulfillment/: Cargo.toml  Dockerfile
fulfillment/api/: Cargo.toml
fulfillment/core/: Cargo.toml
fulfillment/server/: Cargo.toml
fulfillment/src/: error.rs  main.rs
fulfillment/types/: Cargo.toml
google-smart-home/: Cargo.toml  README.md
google-smart-home/src/: device.rs  execute.rs  lib.rs  query.rs  sync.rs
google-smart-home/tests/: common.rs  execute.rs  query.rs  sync.rs
hub/: Cargo.toml
hub/src/: lib.rs  main.rs
lighthouse/: Cargo.toml  client.go  lighthouse  main.go
lighthouse-proto/: Cargo.toml
lighthouse-proto/src/: codec.rs  frame.rs  lib.rs
lighthouse/api/: Cargo.toml
lighthouse/broker/: Cargo.toml
lighthouse/client/: client.go  config.go  connack.go  ping.go  pong.go
lighthouse/core/: Cargo.toml
lighthouse/http_server/: config.go  server.go
lighthouse/macros/: Cargo.toml
lighthouse/packets/: connack.go  connack_test.go  connect.go  connect_test.go  execute.go  execute_response.go  execute_response_test.go  execute_test.go  packets.go  ping.go  ping_test.go  pong.go  pong_test.go  send.go  send_test.go  sendresp.go
lighthouse/proto/: Cargo.toml
lighthouse/server/: Cargo.toml  config.go  connect.go  ping.go  send.go  send_test.go  server.go  session.go  store.go  store_test.go  tcp.go
lighthouse/src/: http_server.rs  lib.rs  main.rs  rpc.rs  server.rs  session.rs  tcp_server.rs  types.rs  ws.rs
lighthouse/tcp_client/: client.go
lighthouse/tcp_server/: config.go  server.go  session.go  store.go  store_test.go  tcp.go
lighthouse/tests/: server.rs
lighthouse/types/: Cargo.toml
lighthouse/utils/: utils.go
macros/: Cargo.toml  README.md
macros/src/: lib.rs
server/: .dockerignore  .env.example  .eslintrc  Cargo.toml  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  package-lock.json  package.json  tsconfig.json
server/__test__/: alarmclock_get_data.test.ts  alarmclock_switch_state.test.ts  watermixer_get_data.test.ts
server/__tests__/: ws_clients.test.ts  ws_devices.test.ts
server/docs/: homie.md
server/examples/: run-server.rs  run.rs
server/scripts/: connectws.ts  generate.ts
server/src/: admin.rs  app.ts  extensions.rs  extractors.rs  helpers.ts  homie.rs  index.ts  lib.rs  main.rs  utils.rs
server/templates/: authorize.html
token/: Cargo.toml
token/src/: lib.rs  payload.rs  signature.rs  token.rs
tui/: Cargo.toml
tui/src/: device.rs  main.rs
types/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
types/src/: accessory.rs  alarmclock.ts  client.rs  client.ts  code.rs  common.rs  device.rs  device.ts  firebase.ts  gate.ts  hive.rs  hub.rs  index.ts  lib.rs  light.ts  lighthouse.rs  misc.ts  other.ts  permission.rs  relay.ts  room.rs  server.rs  structure.rs  token.rs  user.rs  watermixer.ts
(+1171 files in other folders)
