[package]
name = "houseflow"
version = "0.5.2"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
description = "Houseflow is house automation platform for microcontrollers."
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
keywords = ["iot", "home-automation", "smart-home", "cli"]
license = "GPL-3.0-or-later"
edition = "2018"

[[bin]]
path = "core/main.rs"
name = "houseflow"

[workspace]
members = [
  "config",
  "devices/virtual",
  "server",
  "types",
  "db",
  "api",
]


[dependencies]
houseflow-server = { version="0.1.2", path="server", optional=true }
houseflow-db = { version="0.1.1", path="db/", optional=true }
actix-web = { version="4.0.0-beta.8", optional=true }

houseflow-api = { version="0.1.1", path="api", features=["auth", "fulfillment", "admin"], optional=true }
szafka = { version="0.1.2", optional=true }
dialoguer = { version="0.8.0", optional=true }

houseflow-device = { version="0.1.0", path="devices/virtual", optional=true }

houseflow-config = { version="0.1.1", path="config", features=[
  "server",
  "device",
  "client",
  "fs",
] }
houseflow-types = { version="0.1.1", path="types/", features=["token"] }

tokio = { version="1.6.1", features=["sync", "rt-multi-thread", "macros", "fs"] }
url = { version="2.2.2", features=["serde"] }
strum = { version="0.21.0", features=["derive"] }
actix-rt = "2.2.0"
anyhow = "1.0.40"
log = "0.4.14"
xdg = "2.2.0"
async-trait = "0.1.50"
serde = "1.0"
toml = "0.5.8"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
futures = "0.3.15"
rand = "0.8.3"
hex = "0.4.3"
env_logger = "0.8.4"
serde_json = "1.0.64"
semver = { version = "1.0.3", optional = true }
chrono = "0.4.19"

[features]
default = ["server", "client", "device"]
server = ["houseflow-server", "houseflow-db", "actix-web"]
client = ["houseflow-api", "szafka", "dialoguer", "semver"]
device = ["houseflow-device"]
