[package]
name = "houseflow"
version = "0.5.2"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
description = "Houseflow is house automation platform for microcontrollers."
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
keywords = ["iot", "home-automation", "smart-home", "cli"]
license = "GPL-3.0-or-later"
edition = "2018"
resolver = "2"

[[bin]]
path = "core/main.rs"
name = "houseflow"

[workspace]
members = [
  "config",
  "devices/virtual",
  "devices/rpi",
  "server",
  "types",
  "db",
  "api",
  "google-smart-home"
]


[dependencies]
houseflow-api = { version="0.1.1", path="api", features=["auth", "fulfillment"] }
houseflow-config = { version="0.1.1", path="config", features=["client", "fs"] }
houseflow-types = { version="0.1.1", path="types", features=["token"] }

szafka = { version="0.2.0" }
tokio = { version="1.6.1", features=["sync", "rt-multi-thread", "macros", "fs"] }
dialoguer = { version="0.8.0" }
url = { version="2.2.2", features=["serde"] }
strum = { version="0.21.0", features=["derive"] }
anyhow = "1.0.40"
xdg = "2.2.0"
async-trait = "0.1.50"
serde = "1.0"
clap = "2.33.3"
futures = "0.3.15"
rand = "0.8.3"
hex = "0.4.3"
serde_json = "1.0.64"
semver = { version = "1.0.3" }
chrono = "0.4.19"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
Inflector = "0.11.4"
