[package]
name = "houseflow-api"
version = "0.1.1"
description = "API for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"

tokio = { version = "1.6.0", features = ["sync", "macros"], default-features = false }

houseflow-types = { path = "../types", version = "0.1.1", features = ["token"] }
houseflow-config = { path = "../config", version = "0.1.1", features = [
    "client",
] }
tracing = "0.1.26"
tokio-tungstenite = { version = "0.16.0", optional = true }
http = { version = "0.2.5", optional = true }
base64 = { version = "0.13.0", optional = true }
anyhow = "1.0.51"
futures = "0.3.18"

houseflow-accessory-hal = { path = "../accessories/hal", version = "0.1.0", optional = true }
messages = { version = "0.3.0", optional = true }

[features]
auth = ["houseflow-types/auth"]
fulfillment = ["houseflow-types/fulfillment"]
hive = ["houseflow-config/accessory", "tokio-tungstenite", "http", "base64", "messages", "houseflow-accessory-hal"]
