[package]
name = "houseflow-api"
version = "0.1.1"
description = "API for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-types = { path = "../types", version = "0.1.1", features = ["token"] }
houseflow-config = { path = "../config", version = "0.1.1", features = [
    "client",
] }
houseflow-accessory-hal = { path = "../accessories/hal", version = "0.1.0", optional = true }
reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"
tokio = { version = "1.6.0", features = ["sync", "macros"], default-features = false }
tracing = "0.1.26"
ezsockets = { git = "https://github.com/gbaranski/ezsockets.git", branch = "master", features = ["client"], optional = true }
http = { version = "0.2.5", optional = true }
base64 = { version = "0.13.0", optional = true }
anyhow = "1.0.51"
futures = "0.3.18"
async-trait = "0.1.52"
headers = "0.3.7"

[features]
server = []
server-auth = ["server", "houseflow-types/auth"]
server-meta = ["server", "houseflow-types/meta"]

hub = []
hub-hive = ["hub", "houseflow-config/accessory", "ezsockets", "http", "base64", "houseflow-accessory-hal"]
