[package]
name = "houseflow-tui"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

[dependencies]
cursive = "0.16"
reqwest = { version = "0.11", default-features = false, features = [ "blocking" ] }

rand = "0.8"
hex = "0.4.3"
anyhow = "1.0"
cursive-async-view = "0.5"

