[package]
name = "houseflow-cli"
version = "0.5.2"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
description = "CLI Application for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
keywords = ["iot", "home-automation", "smart-home", "cli"]
license = "GPL-3.0-or-later"
edition = "2021"
resolver = "2"

[dependencies]
houseflow-api = { version = "0.1.1", path = "../api", features = [
    "server-auth",
    "server-meta",
] }
houseflow-config = { version = "0.1.1", path = "../config", features = [
    "client",
    "fs",
    "log",
] }
houseflow-types = { version = "0.1.1", path = "../types", features = ["token"] }

szafka = { version = "0.3.0" }
dialoguer = { version = "0.9.0" }
url = { version = "2.2.2", features = ["serde"] }
strum = { version = "0.23.0", features = ["derive"] }
anyhow = "1.0.40"
xdg = "2.2.0"
serde = "1.0"
clap = { version = "3.0.14", features = ["cargo"] }
clap_complete = "3.0.6"
futures = "0.3.15"
rand = "0.8.3"
hex = "0.4.3"
serde_json = "1.0.64"
semver = { version = "1.0.3" }
chrono = "0.4.19"
tracing = "0.1.26"
tracing-subscriber = "0.3.8"
Inflector = "0.11.4"
async-trait = "0.1.52"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
