[package]
name = "houseflow-config"
version = "0.1.1"
description = "Configuration for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-types = { path = "../types/", version = "0.1.1", features = [
    "token",
] }
hex = "0.4.3"
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
xdg = "2.2.0"
url = { version = "2.2.2", features = ["serde"] }
tracing-subscriber = { version = "0.3.1", optional = true }
tracing = "0.1.26"
toml = { version = "0.5.8" }
regex = "1.5.4"

arc-swap = { version = "1.5.0", optional = true }

[features]
log = ["tracing-subscriber"]
dynamic = ["arc-swap"]

client = []
hub = []
accessory = []
server = []
fs = []

[dev-dependencies]
semver = "1.0.4"
serde_with = "1.10.0"
toml = "0.5.8"
