[package]
name = "houseflow"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types              = { path = "../types/"             , package = "houseflow-types" }
token              = { path = "../token/"             , package = "houseflow-token", features = [ "store" ] }
auth-api           = { path = "../auth/api/"          , package = "houseflow-auth-api" }
auth-types         = { path = "../auth/types/"        , package = "houseflow-auth-types" }
auth-server        = { path = "../auth/server/"       , package = "houseflow-auth-server" }
db                 = { path = "../db/"                , package = "houseflow-db" }
lighthouse-server  = { path = "../lighthouse/server/" , package = "houseflow-lighthouse-server" }
fulfillment-server = { path = "../fulfillment/server/", package = "houseflow-fulfillment-server" }
fulfillment-types  = { path = "../fulfillment/types/" , package = "houseflow-fulfillment-types" }
fulfillment-api    = { path = "../fulfillment/api/"   , package = "houseflow-fulfillment-api" }

tokio              = { version = "1.6.1"             , features = ["sync", "rt-multi-thread", "macros", "fs"] }
url                = { version = "2.2.2"             , features = ["serde"] }
actix-rt           = "2.2.0"
dialoguer          = "0.8.0"
anyhow             = "1.0.40"
log                = "0.4.14"
xdg                = "2.2.0"
async-trait        = "0.1.50"
serde              = "1.0"
toml               = "0.5.8"
strum              = "0.21.0"
strum_macros       = "0.21.1"
clap               = "3.0.0-beta.2"
futures            = "0.3.15"
rand               = "0.8.3"
hex                = "0.4.3"
indoc              = "1.0.3"
env_logger         = "0.8.4"
serde_json         = "1.0.64"
humantime = "2.1.0"
