[package]
name = "houseflow"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types              = { path = "../types/"             , package = "houseflow-types" }
token              = { path = "../token/"             , package = "houseflow-token", features = [ "store" ] }
auth               = { path = "../auth/core/"         , package = "houseflow-auth"     }
db                 = { path = "../db/"                , package = "houseflow-db" }
lighthouse         = { path = "../lighthouse/core"    , package = "houseflow-lighthouse" }
fulfillment        = { path = "../fulfillment/core"   , package = "houseflow-fulfillment" }
device             = { path = "../devices/virtual"    , package = "houseflow-device" }

tokio              = { version = "1.6.1"             , features = ["sync", "rt-multi-thread", "macros", "fs"] }
url                = { version = "2.2.2"             , features = ["serde"] }
strum              = { version = "0.21.0"            , features = [ "derive" ] }
actix-rt           = "2.2.0"
actix-web          = "=4.0.0-beta.5" 
dialoguer          = "0.8.0"
anyhow             = "1.0.40"
log                = "0.4.14"
xdg                = "2.2.0"
async-trait        = "0.1.50"
serde              = "1.0"
toml               = "0.5.8"
clap               = "3.0.0-beta.2"
futures            = "0.3.15"
rand               = "0.8.3"
hex                = "0.4.3"
indoc              = "1.0.3"
env_logger         = "0.8.4"
serde_json         = "1.0.64"
humantime          = "2.1.0"
szafka = "0.1.0"
