[package]
name = "houseflow-db"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types             = { path = "../types", features = [ "postgres-types" ], package = "houseflow-types" }
config            = { path = "../config", features = [ "postgres" ]       , package = "houseflow-config" }
refinery          = { version = "0.5.0", features = [ "tokio-postgres" ] }
serde             = { version = "1.0.126", features = ["derive"] }
tokio             = { version = "1.6", features = [ "macros" ] }
tokio-postgres    = "0.7"
deadpool-postgres = "0.9.0"
semver            = "1.0.3"

log               = "0.4"
thiserror         = "1.0"
async-trait       = "0.1.50"

[dev-dependencies]
tokio             = { version = "1.6", features = ["macros", "rt-multi-thread"] }
rust-argon2       = "0.8"

