[package]
name = "houseflow-db"
version = "0.1.1"
description = "Server for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-types   = { path = "../types", version = "0.1.1", features = ["rusqlite"] }
houseflow-config  = { path = "../config", version = "0.1.1" }
serde             = { version = "1.0.126", features = ["derive"] }
tokio             = { version = "1.6", features = [ "macros", "sync" ] }
semver            = "1.0.3"

log               = "0.4"
thiserror         = "1.0"
async-trait       = "0.1.50"
serde_json = "1.0.64"

refinery = { version = "0.5.0", optional = true }
# replace to 0.25 when https://github.com/rust-db/refinery/issues/163 will be closed
rusqlite = { version = "< 0.25", optional = true } 
r2d2_sqlite = { version = "0.17.0", optional = true }
r2d2 = { version = "0.8.9", optional = true }
fallible-iterator = { version = "0.2.0", optional = true }

[features]
default = [ "sqlite"]
sqlite = [ "rusqlite", "refinery/rusqlite", "r2d2", "r2d2_sqlite", "fallible-iterator" ]


[dev-dependencies]
tokio             = { version = "1.6", features = ["macros", "rt-multi-thread"] }
rust-argon2       = "0.8"
rand = "0.8.4"
hex = "0.4.3"

