[package]
name = "houseflow-fulfillment"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-db = { path = "../db" }
houseflow-token = { path = "../token" }
serde = "1"
serde_json = "1"
actix-web = "4.0.0-beta.4"
log = "0.4.14"
env_logger = "0.8.3"
base64 = "0.13.0"
uuid = { version = "0.8", features = ["v4"] }
