[package]
name = "google-smart-home"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = [ "derive" ] }
serde_json = "1.0.66"

[dev-dependencies]
lazy_static = "1.4.0"
