[package]
name = "houseflow-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acu = { version = "0.4.0", features = ["master-slave"] }
anyhow = "1.0.43"
arc-swap = "1.5.0"
async-trait = "0.1.51"
axum = { version = "0.4.3", features = ["ws", "headers"] }
axum-server = "0.3.3"
base64 = "0.13.0"
chrono = "0.4.19"
futures = "0.3.17"
houseflow-config = { path = "../config/", features = ["hub", "fs", "log"] }
houseflow-types = { path = "../types/", features = ["lighthouse", "axum"] }
http = "0.2.6"
mac_address = "1.1.2"
rand = "0.6.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
strum = { version = "0.23.0", features = ["derive"] }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.26"
uuid = { version = "0.8.2", features = ["v4"] }
xdg = "2.4.0"

mijia = { version = "0.5.0", optional = true }
ezsockets = { git = "https://github.com/gbaranski/ezsockets.git", branch = "master", features = ["server-tungstenite", "client"], optional = true }
hap = { version = "0.1.0-pre.14", optional = true }
cfg-if = "1.0.0"

[features]
controllers-hap = ["hap"]
controllers-meta = []
controllers-lighthouse = ["ezsockets"]

providers-hive = []
providers-mijia = ["mijia"]
