[package]
name = "lighthouse-proto"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", default_features = false }
tokio-util = { version = "0.6", features = [ "codec" ] }
bytes = "1.0"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
rand = "0.8"
