[package]
name = "houseflow_lighthouse"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
memcache = "0.15"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "0.8", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"

houseflow_db = { path = "../db", optional = true }
env_logger = { version = "0.8", optional = true }
tokio = { version = "1.4", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
warp = { version = "0.3", optional = true }

[lib]
name = "houseflow_lighthouse"

[features]
default = ["houseflow_db", "env_logger", "tokio", "futures", "warp"]

[[bin]]
name = "houseflow_lighthouse"
