[package]
name = "houseflow_lighthouse"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
tokio = { version = "1.4", features = ["full"] }
log = "0.4"
warp = "0.3"
bytes = "1.0"


[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
