[package]
name = "houseflow-macros"
version = "0.1.1"
description = "Macros for Houseflow - archived"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn   = { version = "1.0", features = [ "full" ] }
quote = "1.0"

[lib]
proc-macro = true
