[package]
name = "houseflow-server"
version = "0.1.2"
description = "Server for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
keywords = ["iot", "home-automation", "smart-home", "web"]
license = "GPL-3.0-or-later"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-types = { path = "../types", features = [
    "askama",
    "validator",
    "axum",
    "token",
    "auth",
    "lighthouse",
] }
houseflow-config = { path = "../config", version = "0.1.1", features = [
    "dynamic",
    "fs",
    "log",

    "server",
] }
askama = "0.11.0"
tokio = { version = "1.5", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
axum = { version = "0.5.1", features = ["ws", "headers"]}
tracing = "0.1.29"
anyhow = "1.0.53"
async-trait = "0.1.52"
lettre = { version = "0.10.0-rc.4", features = ["smtp-transport", "builder", "rustls-tls"] }
thiserror = "1.0.30"
urlencoding = "2.1.0"
chrono = "0.4.19"
bincode = "1.3.3"
sled = "0.34.7"
serde = "1.0.134"
rand = "0.8.4"
strum = { version = "0.24.0", features = ["derive"] }
axum-server = { version = "0.3.3", features = ["tls-rustls"] }
futures = "0.3.19"
serde_json = "1.0.78"
acu = { version = "0.4.1", features = ["master-slave"] }
validator = "0.14.0"
url = "2.2.2"
ezsockets = { version = "0.2.0", features = ["server-axum"] }
arc-swap = "1.5.0"

[features]
