[package]
name = "houseflow-token"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-types = { path = "../types" }
serde = { version = "1.0", features = [ "derive" ], optional = true }

hmac = "0.10"
sha2 = "0.9"
base64 = "0.13"
bytes = "1"
thiserror = "1.0"


[dev-dependencies]
rand = "0.8"
