[package]
name = "houseflow-token"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types        = { path = "../types", package = "houseflow-types" }

serde        = { version = "1.0"    , features = [ "derive" ]    , optional = true }
tokio        = { version = "1.6.1"  , features = [ "sync" ]      , optional = true }
async-trait  = { version = "0.1.50" , optional = true }
redis-client = { version = "0.20.1" , features = [ "tokio-comp" ], optional = true, package = "redis" }
hmac         = "0.11"
sha2         = "0.9"
base64       = "0.13"
bytes        = "1"
thiserror    = "1.0"
hex          = "0.4.3"
rand         = "0.8"

[features]
default      = [ "serde" ]
store        = [ "redis-client", "tokio", "async-trait" ]

[dev-dependencies]
serde        = { version = "1.0", features = [ "derive" ] }
serde_json   = "1.0.64"
