[package]
name = "houseflow-tui"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16"
anyhow = "1.0"
rand = "0.8"
hex = "0.4"

cursive-async-view = "0.5"
reqwest = { version = "0.11", default-features = false, features = [ "blocking" ] }
