[package]
name = "houseflow-types"
version = "0.1.1"
description = "Types for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex            = "0.4"
rand           = "0.8"
thiserror      = "1.0"
bytes          = "1"
semver         = { version = "1.0.3", features = ["serde"] }

actix-web  	= { version = "4.0.0-beta.7", optional = true, default-features = false }

strum          = { version = "0.21.0", features = ["derive"] }

serde          = { version = "1.0", features = ["derive"] }
serde_json     = { version = "1.0.64" }

rusqlite = { version = "< 0.25", optional = true } 

validator = { version = "0.13.0", features = ["derive"], optional = true }
chrono = { version = "0.4.19", features = ["serde"], optional = true }
ring = { version = "0.16.20", optional = true }
base64 = { version = "0.13.0", optional = true }

[features]
actix          = [ "actix-web" ]
token          = [ "ring", "chrono", "base64" ]
admin          = [ "validator" ]
auth           = [ "token", "validator" ]
fulfillment    = [ "token", "lighthouse" ]
lighthouse     = [ ]
